# netboot-webserver

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml
app/: config.yml  main.py  settings.py  talos.py  utils.py
app/static/: boot.ipxe
src/app/: main.py  models.py  router.py
src/app/alpine/: router.py  utils.py
src/app/core/: db.py  exceptions.py  ipxe.py  model.py  router.py  settings.py  utils.py  vault.py
src/app/crud/: router.py
src/app/front/: router.py
src/app/front/templates/: index.html
src/app/talos/: router.py
