[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "6.0.2"
requests = "2.32.4"
fastapi = "0.115.12"
uvicorn = "0.34.3"
pydantic = "2.11.7"
pydantic-settings = "2.10.1"
jinja2 = "3.1.6"
packaging = "25.0"
sqlmodel = "0.0.24"
python-multipart = "0.0.20"

[tool.poetry.group.test.dependencies]
pytest-cov = "5.0.0"
pytest = "8.3.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "3.8.0"

[tool.mypy]

[[tool.mypy.overrides]]
module = [
    "requests",
]
ignore_missing_imports = true
